# phalanx

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile
bpf/: CMakeLists.txt
bpf/src/: main.bpf.c
examples/: falco-libbpf.rs  falco.rs
include/: phalanx.h
scripts/: build-bpf.sh
src/: lib.rs
